Stop images in articles overflowing container

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,6 +37,9 @@ article {
     display: block;
     address { display: block; margin-bottom: 0.5em; }
   }
+  img {
+    max-width: 100%;
+  }
 }
 
 nav {
